--- a/ejercicio10.ipynb
+++ b/ejercicio10.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,10 +40,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Agustin', 'Yanina', 'Andrés', 'Ariadna', 'Bautista', 'CAROLINA', 'CESAR', 'David', 'Diego', 'Dolores', 'DYLAN', 'ELIANA', 'Emanuel', 'Fabián', 'Noelia', 'Francsica', 'FEDERICO', 'Fernanda', 'GONZALO', 'Nancy']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import string_to_list\n",
+    "\n",
+    "names = string_to_list.string_multiline_transformer(names)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Una vez el string es limpiado y pasado a una lista para trabajar con elementos del mismo tipo. Vamos a generar una estructura que englobe a las 4 listas. En este caso vamos a utilizar una lista de diccionarios, en los cuales cada jugador va tener asociado su nombre y sus estadisticas. "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "player_stats = [{\"name\": name, \"goals\": player_goals, \"goals_avoided\": player_goals_avoided, \"assists\": player_assists} \n",
+    "                for name, player_goals, player_goals_avoided, player_assists \n",
+    "                in zip(names, goals, goals_avoided, assists)]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -106,8 +136,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
