Se agrega la resolucion del punto 2

--- a/ejercicio10.ipynb
+++ b/ejercicio10.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,17 +40,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Agustin', 'Yanina', 'Andrés', 'Ariadna', 'Bautista', 'CAROLINA', 'CESAR', 'David', 'Diego', 'Dolores', 'DYLAN', 'ELIANA', 'Emanuel', 'Fabián', 'Noelia', 'Francsica', 'FEDERICO', 'Fernanda', 'GONZALO', 'Nancy']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import string_to_list\n",
     "\n",
@@ -87,7 +79,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import hockey_stats\n",
+    "\n",
+    "max_striker_goals, max_striker = hockey_stats.team_max_striker(player_stats)\n",
+    "\n",
+    "print(f\"Lx goleadorx del equipo es {max_striker} con {max_striker_goals} goles.\")"
+   ]
   },
   {
    "cell_type": "markdown",
