Se agrega la resolucion del punto 3

--- a/ejercicio10.ipynb
+++ b/ejercicio10.ipynb
@@ -102,7 +102,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "most_valuable_player_points, most_valuable_player = "
+   ]
   },
   {
    "cell_type": "markdown",
