Se agrega correctamente la resolucion del punto 3

--- a/ejercicio10.ipynb
+++ b/ejercicio10.ipynb
@@ -103,7 +103,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "most_valuable_player_points, most_valuable_player = "
+    "most_valuable_player_points, most_valuable_player = hockey_stats.most_influent_player(player_stats)\n",
+    "\n",
+    "print(f\"El jugador más influyente fue {most_valuable_player} con {most_valuable_player_points} puntos de influencia.\")"
    ]
   },
   {
