Se agrega la resolucion del punto 4

--- a/ejercicio10.ipynb
+++ b/ejercicio10.ipynb
@@ -121,7 +121,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "total_goals = hockey_stats.team_goals(player_stats)\n",
+    "\n",
+    "print(f\"El equipo hizo {total_goals} goles y el promedio de goles en 25 partidos fue {total_goals/25} goles por partido.\")"
+   ]
   },
   {
    "cell_type": "markdown",
