Se agrega la resolucion del punto 5

--- a/ejercicio10.ipynb
+++ b/ejercicio10.ipynb
@@ -136,9 +136,15 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "max_striker_goals, max_striker = hockey_stats.team_max_striker(player_stats)\n",
+    "\n",
+    "print(f\"Lx goleadorx del equipo {max_striker} hizo {max_striker_goals} goles y promedió {max_striker_goals/25} goles por partido.\")"
+   ]
   }
  ],
  "metadata": {
